--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -62,7 +62,7 @@
             <a th:href="@{/gotoPwdSearch}"> 비밀번호 찾기 </a>
             <a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a>
 
-            <a th:href="@{/6}"> 회원가입 </a>
+            <a th:href="@{/gotoJoin}"> 회원가입 </a>
         </div>     
     </section>
 
