--- a/src/main/resources/templates/loginClient/checkyourId.html
+++ b/src/main/resources/templates/loginClient/checkyourId.html
@@ -1,1 +1,31 @@
-</span>ID: <span th:text="${result}"></span>
+
+
+<!DOCTYPE html>
+
+<html lang = en>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>이용약관 동의</title>
+    <meta charset="UTF-8">
+    <script src="js/jquery/jquery-2.2.4.min.js"></script>
+    <link rel="stylesheet" href="/membership.css">
+</head>
+
+<body>
+<div class="wrap">
+    <div class="logo"><h1>GET-TOO</h1></div>
+    <div class="contents">
+        <form action="gotoLogin" method="GET" id="form__wrap">
+            <div class="dd">
+                <label for="checkAll"
+                >회원 아이디 : </label
+                >
+                </span> <span th:text="${result}"></span>
+            </div>
+            <button type="button" class="next-button" onclick="location.href='/gotoLogin' ">로그인 하기</button>
+        </form>
+    </div>
+</div>
+</script>
+</body>
+</html>
